NetBSD Problem Report #51298

From www@NetBSD.org  Thu Jun 30 08:46:05 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 39C117A210
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 30 Jun 2016 08:46:05 +0000 (UTC)
Message-Id: <20160630084604.204B77AAC3@mollari.NetBSD.org>
Date: Thu, 30 Jun 2016 08:46:04 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/usr.bin/error/pi.c: 2 * redundant condition ?
X-Send-Pr-Version: www-1.0

>Number:         51298
>Category:       bin
>Synopsis:       src/usr.bin/error/pi.c: 2 * redundant condition ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Jun 30 08:50:00 +0000 2016
>Closed-Date:    Thu Jun 30 15:41:33 +0000 2016
>Last-Modified:  Thu Jun 30 15:41:33 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160630
>Organization:
>Environment:
>Description:
src/usr.bin/error/pi.c:221]: (style) Redundant condition: If 'EXPR == '-'', the comparison 'EXPR' is always true.
src/usr.bin/error/pi.c:226]: (style) Redundant condition: If 'EXPR == '-'', the comparison 'EXPR' is always true.

Source code is

    while (*string && *string == '-')

and

    while (*string && *string == '-')


>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51298 CVS commit: src/usr.bin/error
Date: Thu, 30 Jun 2016 15:34:30 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Thu Jun 30 15:34:30 UTC 2016

 Modified Files:
 	src/usr.bin/error: pi.c

 Log Message:
 PR 51298 David Binderman: simplify redundant conditionals


 To generate a diff of this commit:
 cvs rdiff -u -r1.18 -r1.19 src/usr.bin/error/pi.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Thu, 30 Jun 2016 15:41:33 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.