PR 51298 David Binderman: simplify redundant conditionals